NetBSD Problem Report #40955

From dhgutteridge@sympatico.ca  Wed Mar  4 06:21:25 2009
Return-Path: <dhgutteridge@sympatico.ca>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 8DA6063BAB8
	for <gnats-bugs@gnats.netbsd.org>; Wed,  4 Mar 2009 06:21:25 +0000 (UTC)
Message-Id: <COL0-F1362E4903FE1FC7DC59782B7A70@phx.gbl>
Date: Wed, 04 Mar 2009 01:21:20 -0500
From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: gnats-bugs@netbsd.org
Subject: re(4) fails to work with hardware checksumming enabled

>Number:         40955
>Category:       kern
>Synopsis:       re(4) fails to work with hardware checksumming enabled
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    tsutsui
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Mar 04 06:25:00 +0000 2009
>Closed-Date:    Sun May 17 18:34:09 +0000 2009
>Last-Modified:  Sun May 17 18:34:09 +0000 2009
>Originator:     David H. Gutteridge
>Release:        NetBSD 5.0_RC2
>Organization:
>Environment:


System: NetBSD arcusvii.nonus-porta.net 5.0_RC2 NetBSD 5.0_RC2 (ARCUSVII) 
#0: Mon Mar  2 23:22:17 EST 2009
disciple@arcusvii.nonus-porta.net:/home/disciple/netbsd-5/usr/src/sys/arch/i386/compile/obj/ARCUSVII 
i386

Architecture: i386
Machine: i386
>Description:
Hello,

I've found that employing re(4) with hardware checksumming enabled
causes networking to be unusable.

[root@arcusvii:root]$ ifconfig re0
re0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 
1500	capabilities=3f80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx>
	enabled=0
	address: 00:21:85:e1:d8:82
	media: Ethernet autoselect (100baseTX full-duplex)
	status: active
	inet 192.168.1.8 netmask 0xffffff00 broadcast 192.168.1.255
	inet6 fe80::221:85ff:fee1:d882%re0 prefixlen 64 scopeid 0x1
[root@arcusvii:root]$ ping www.netbsd.org
PING www.netbsd.org (204.152.190.12): 56 data bytes
64 bytes from 204.152.190.12: icmp_seq=0 ttl=240 time=81.696 ms
64 bytes from 204.152.190.12: icmp_seq=1 ttl=240 time=80.499 ms
64 bytes from 204.152.190.12: icmp_seq=2 ttl=240 time=80.675 ms
^C
----www.netbsd.org PING Statistics----
3 packets transmitted, 3 packets received, 0.0% packet loss
round-trip min/avg/max/stddev = 80.499/80.957/81.696/0.646 ms
[root@arcusvii:root]$ ifconfig re0 ip4csum
[root@arcusvii:root]$ ifconfig re0
re0: flags=8843<UP,BROADCAST,RUNNING,SIMPLEX,MULTICAST> mtu 
1500	capabilities=3f80<TSO4,IP4CSUM_Rx,IP4CSUM_Tx,TCP4CSUM_Rx,TCP4CSUM_Tx,UDP4CSUM_Rx,UDP4CSUM_Tx>
	enabled=300<IP4CSUM_Rx,IP4CSUM_Tx>
	address: 00:21:85:e1:d8:82
	media: Ethernet autoselect (100baseTX full-duplex)
	status: active
	inet 192.168.1.8 netmask 0xffffff00 broadcast 192.168.1.255
	inet6 fe80::221:85ff:fee1:d882%re0 prefixlen 64 scopeid 0x1
[root@arcusvii:root]$ ping www.netbsd.org
[root@arcusvii:root]$ ping www.google.ca
ping: Cannot resolve "www.google.ca" (Host name lookup failure)
[root@arcusvii:root]$ ifconfig re0 -ip4csum
[root@arcusvii:root]$ ping www.google.ca
PING www.l.google.com (72.14.205.104): 56 data bytes
64 bytes from 72.14.205.104: icmp_seq=0 ttl=245 time=7.592 ms
64 bytes from 72.14.205.104: icmp_seq=1 ttl=245 time=6.659 ms
64 bytes from 72.14.205.104: icmp_seq=2 ttl=245 time=7.036 ms
^C
----www.l.google.com PING Statistics----
3 packets transmitted, 3 packets received, 0.0% packet loss
round-trip min/avg/max/stddev = 6.659/7.096/7.592/0.469 ms

The same issue occurs if I have TCP or UDP enabled as well;
individually, they cause the same problem with their respective
protocols.

The machine in question is an LG X110 (a rebadged MSI Wind netbook),
dmesg excerpt is:

re0 at pci1 dev 0 function 0: RealTek 8100E/8101E/8102E/8102EL PCIe 
10/100BaseTX (rev. 0x02)
re0: interrupting at irq 11
re0: Ethernet address 00:21:85:e1:d8:82
re0: using 256 tx descriptors
rlphy0 at re0 phy 7: RTL8201L 10/100 media interface, rev. 1
rlphy0: 10baseT, 10baseT-FDX, 100baseTX, 100baseTX-FDX, auto

At present, the packets are being sent on the wire from the machine in
question to a switch.  When I have one of these hardware checksumming
features enabled and am trying to pass applicable packets, the lights
on the switch don't seem to register incoming packets.

Regards,

Dave

>How-To-Repeat:
As above.

>Fix:
None known.  (The workaround is simply to not use the hardware checksumming, 
of course.)


>Release-Note:

>Audit-Trail:
From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: kern-bug-people@NetBSD.org, gnats-admin@NetBSD.org, netbsd-bugs@NetBSD.org,
        tsutsui@ceres.dti.ne.jp
Subject: Re: kern/40955: re(4) fails to work with hardware checksumming enabled
Date: Fri, 20 Mar 2009 17:12:18 +0900

 > >Synopsis:       re(4) fails to work with hardware checksumming enabled
  :
 > re0 at pci1 dev 0 function 0: RealTek 8100E/8101E/8102E/8102EL PCIe 
 > 10/100BaseTX (rev. 0x02)

 Could you try this patch (from FreeBSD) for -current?

 If you'd like to try it on netbsd-5, you also have to apply
 the previous another fix first: 
 http://mail-index.NetBSD.org/source-changes/2009/03/20/msg218651.html
 http://cvsweb.de.NetBSD.org/cgi-bin/cvsweb.cgi/src/sys/dev/ic/rtl8169.c.diff?r1=1.107;r2=1.108
 http://cvsweb.de.NetBSD.org/cgi-bin/cvsweb.cgi/src/sys/dev/ic/rtl81x9var.h.diff?r1=1.41;r2=1.42

 You can also check RX csum status by a kernel configured with
 "options INET_CSUM_COUNTERS,TCP_CSUM_COUNTERS,UDP_CSUM_COUNTER"
 and commands like "vmstat -ev|grep csum" .

 ---
 Index: rtl8169.c
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/ic/rtl8169.c,v
 retrieving revision 1.108
 diff -u -r1.108 rtl8169.c
 --- rtl8169.c	20 Mar 2009 06:31:31 -0000	1.108
 +++ rtl8169.c	20 Mar 2009 07:43:21 -0000
 @@ -606,6 +606,7 @@
  		case RTK_HWREV_8102E:
  		case RTK_HWREV_8102EL:
  			sc->sc_rev = 25;
 +			sc->sc_quirk |= RTKQ_DESCV2;
  			break;
  		case RTK_HWREV_8100E:
  		case RTK_HWREV_8100E_SPIN2:
 @@ -792,6 +793,15 @@
  	    IFCAP_CSUM_TCPv4_Tx | IFCAP_CSUM_TCPv4_Rx |
  	    IFCAP_CSUM_UDPv4_Tx | IFCAP_CSUM_UDPv4_Rx |
  	    IFCAP_TSOv4;
 +
 +	/*
 +	 * XXX
 +	 * Still have no idea how to make TSO work on 8168C, 8168CP,
 +	 * 8102E, 8111C and 8111CP.
 +	 */
 +	if ((sc->sc_quirk & RTKQ_DESCV2) != 0)
 +		ifp->if_capabilities &= ~IFCAP_TSOv4;
 +
  	ifp->if_watchdog = re_watchdog;
  	ifp->if_init = re_init;
  	ifp->if_snd.ifq_maxlen = RE_IFQ_MAXLEN;
 @@ -1238,7 +1248,9 @@
  		/* Do RX checksumming */

  		/* Check IP header checksum */
 -		if (rxstat & RE_RDESC_STAT_PROTOID) {
 +		if ((rxstat & RE_RDESC_STAT_PROTOID) != 0 &&
 +		    ((sc->sc_quirk & RTKQ_DESCV2) == 0 ||
 +		     (rxvlan & RE_PROTOID_IP) != 0)) {
  			m->m_pkthdr.csum_flags |= M_CSUM_IPv4;
  			if (rxstat & RE_RDESC_STAT_IPSUMBAD)
  				m->m_pkthdr.csum_flags |= M_CSUM_IPv4_BAD;
 @@ -1453,6 +1465,7 @@
  		 * chip. I'm not sure if this is a requirement or a bug.)
  		 */

 +		vlanctl = 0;
  		if ((m->m_pkthdr.csum_flags & M_CSUM_TSOv4) != 0) {
  			uint32_t segsz = m->m_pkthdr.segsz;

 @@ -1468,12 +1481,28 @@
  			if ((m->m_pkthdr.csum_flags &
  			    (M_CSUM_IPv4 | M_CSUM_TCPv4 | M_CSUM_UDPv4))
  			    != 0) {
 -				re_flags |= RE_TDESC_CMD_IPCSUM;
 -				if (m->m_pkthdr.csum_flags & M_CSUM_TCPv4) {
 -					re_flags |= RE_TDESC_CMD_TCPCSUM;
 -				} else if (m->m_pkthdr.csum_flags &
 -				    M_CSUM_UDPv4) {
 -					re_flags |= RE_TDESC_CMD_UDPCSUM;
 +				if ((sc->sc_quirk & RTKQ_DESCV2) == 0) {
 +					re_flags |= RE_TDESC_CMD_IPCSUM;
 +					if (m->m_pkthdr.csum_flags &
 +					    M_CSUM_TCPv4) {
 +						re_flags |=
 +						    RE_TDESC_CMD_TCPCSUM;
 +					} else if (m->m_pkthdr.csum_flags &
 +					    M_CSUM_UDPv4) {
 +						re_flags |=
 +						    RE_TDESC_CMD_UDPCSUM;
 +					}
 +				} else {
 +					vlanctl |= RE_TDESC_VLANCTL_IPCSUM;
 +					if (m->m_pkthdr.csum_flags &
 +					    M_CSUM_TCPv4) {
 +						vlanctl |=
 +						    RE_TDESC_VLANCTL_TCPCSUM;
 +					} else if (m->m_pkthdr.csum_flags &
 +					    M_CSUM_UDPv4) {
 +						vlanctl |=
 +						    RE_TDESC_VLANCTL_UDPCSUM;
 +					}
  				}
  			}
  		}
 @@ -1497,7 +1526,8 @@
  		nsegs = map->dm_nsegs;
  		pad = false;
  		if (__predict_false(m->m_pkthdr.len <= RE_IP4CSUMTX_PADLEN &&
 -		    (re_flags & RE_TDESC_CMD_IPCSUM) != 0)) {
 +		    (re_flags & RE_TDESC_CMD_IPCSUM) != 0 &&
 +		    (sc->sc_quirk & RTKQ_DESCV2) == 0)) {
  			pad = true;
  			nsegs++;
  		}
 @@ -1525,9 +1555,8 @@
  		 * appear in all descriptors of a multi-descriptor
  		 * transmission attempt.
  		 */
 -		vlanctl = 0;
  		if ((mtag = VLAN_OUTPUT_TAG(&sc->ethercom, m)) != NULL)
 -			vlanctl = bswap16(VLAN_TAG_VALUE(mtag)) |
 +			vlanctl |= bswap16(VLAN_TAG_VALUE(mtag)) |
  			    RE_TDESC_VLANCTL_TAG;

  		/*
 Index: rtl81x9reg.h
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/ic/rtl81x9reg.h,v
 retrieving revision 1.33
 diff -u -r1.33 rtl81x9reg.h
 --- rtl81x9reg.h	8 Dec 2008 03:24:08 -0000	1.33
 +++ rtl81x9reg.h	20 Mar 2009 07:43:22 -0000
 @@ -475,6 +475,9 @@

  #define RE_TDESC_VLANCTL_TAG	0x00020000	/* Insert VLAN tag */
  #define RE_TDESC_VLANCTL_DATA	0x0000FFFF	/* TAG data */
 +#define RE_TDESC_VLANCTL_UDPCSUM 0x80000000	/* DESCV2 UDP cksum enable */
 +#define RE_TDESC_VLANCTL_TCPCSUM 0x40000000	/* DESCV2 TCP cksum enable */
 +#define RE_TDESC_VLANCTL_IPCSUM	0x20000000	/* DESCV2 IP hdr cksum enable */

  /*
   * Error bits are valid only on the last descriptor of a frame
 Index: rtl81x9var.h
 ===================================================================
 RCS file: /cvsroot/src/sys/dev/ic/rtl81x9var.h,v
 retrieving revision 1.42
 diff -u -r1.42 rtl81x9var.h
 --- rtl81x9var.h	20 Mar 2009 06:31:31 -0000	1.42
 +++ rtl81x9var.h	20 Mar 2009 07:43:22 -0000
 @@ -189,6 +189,7 @@
  #define RTKQ_8169NONS		0x00000004	/* old non-single 8169 */
  #define RTKQ_PCIE		0x00000008	/* PCIe variants */
  #define RTKQ_MACLDPS		0x00000010	/* has LDPS register */
 +#define RTKQ_DESCV2		0x00000020	/* has V2 TX/RX descriptor */

  	bus_dma_tag_t 		sc_dmat;


 ---
 Izumi Tsutsui

Responsible-Changed-From-To: kern-bug-people->tsutsui
Responsible-Changed-By: tsutsui@NetBSD.org
Responsible-Changed-When: Fri, 20 Mar 2009 17:16:19 +0900
Responsible-Changed-Why:


State-Changed-From-To: open->feedback
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 20 Mar 2009 17:16:19 +0900
State-Changed-Why:
awaiting feedback.


From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@NetBSD.org, netbsd-bugs@NetBSD.org, tsutsui@ceres.dti.ne.jp
Subject: Re: kern/40955: re(4) fails to work with hardware checksumming enabled
Date: Sat, 21 Mar 2009 04:29:16 +0900

 > Could you try this patch (from FreeBSD) for -current?

 Updated patch is here (more chips requires DESCV2):
 http://mail-index.NetBSD.org/source-changes-d/2009/03/20/msg000073.html

 ---
 Izumi Tsutsui

From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: src/sys/dev/ic
Date: Sat, 21 Mar 2009 07:58:31 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Mar 21 07:58:30 UTC 2009

 Modified Files:
 	src/sys/dev/ic: rtl8169.c rtl81x9reg.h rtl81x9var.h

 Log Message:
 Add hardware checksum support for newer PCIe 8168/8111/8102 chips,
 per device info taken from FreeBSD driver.  Tested by snj@ on 8111C.

 Should closes PR kern/40955.

 Note on old 8169 chips IP hw csum must be enabled to use TCP/UDP hw csums,
 but I'm not sure if these newer chips still have the same restriction.


 To generate a diff of this commit:
 cvs rdiff -u -r1.108 -r1.109 src/sys/dev/ic/rtl8169.c
 cvs rdiff -u -r1.33 -r1.34 src/sys/dev/ic/rtl81x9reg.h
 cvs rdiff -u -r1.42 -r1.43 src/sys/dev/ic/rtl81x9var.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Izumi Tsutsui <tsutsui@ceres.dti.ne.jp>
To: gnats-bugs@NetBSD.org
Cc: gnats-admin@NetBSD.org, tsutsui@ceres.dti.ne.jp
Subject: Re: kern/40955: re(4) fails to work with hardware checksumming enabled
Date: Sun, 22 Mar 2009 05:26:49 +0900

 I've put compiled RC3 kernels with fixes for PR kern/40995 and kern/41009:
 ftp://ftp.NetBSD.org/pub/NetBSD/misc/tsutsui/5.0_RC3/netbsd-amd64-5.0_RC3-20090321.gz
 ftp://ftp.NetBSD.org/pub/NetBSD/misc/tsutsui/5.0_RC3/netbsd-i386-5.0_RC3-20090321.gz

 ---
 Izumi Tsutsui

From: "David H. Gutteridge" <dhgutteridge@sympatico.ca>
To: <gnats-bugs@netbsd.org>
Cc: 
Subject: RE: kern/40955: re(4) fails to work with hardware checksumming
 enabled
Date: Sat, 21 Mar 2009 17:24:24 -0400

 --_0130e5a4-0973-4ca0-bc15-56d0b1b10e41_
 Content-Type: text/plain; charset="iso-8859-1"
 Content-Transfer-Encoding: quoted-printable


 Hello=2C

 Confirming this fixes the problem for me on 5.0_RC3/i386.  Thanks for
 this.  (Also=2C thanks for providing the 5.0_RC3 test kernels.  I'd built
 a GENERIC 5.99.8 kernel and modules to test with=2C but ran into an
 unrelated problem where it won't recognize my root partition for some
 reason.)

 Thanks=2C

 Dave

 --_0130e5a4-0973-4ca0-bc15-56d0b1b10e41_
 Content-Type: text/html; charset="iso-8859-1"
 Content-Transfer-Encoding: quoted-printable

 <html>
 <head>
 <style>
 .hmmessage P
 {
 margin:0px=3B
 padding:0px
 }
 body.hmmessage
 {
 font-size: 10pt=3B
 font-family:Verdana
 }
 </style>
 </head>
 <body class=3D'hmmessage'>
 Hello=2C<br><br>Confirming this fixes the problem for me on 5.0_RC3/i386.&n=
 bsp=3B Thanks for<br>this.&nbsp=3B (Also=2C thanks for providing the 5.0_RC=
 3 test kernels.&nbsp=3B I'd built<br>a GENERIC 5.99.8 kernel and modules to=
  test with=2C but ran into an<br>unrelated problem where it won't recognize=
  my root partition for some<br>reason.)<br><br>Thanks=2C<br><br>Dave<br></b=
 ody>
 </html>=

 --_0130e5a4-0973-4ca0-bc15-56d0b1b10e41_--

State-Changed-From-To: feedback->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Tue, 24 Mar 2009 20:22:41 +0900
State-Changed-Why:
ticket #597


State-Changed-From-To: pending-pullups->open
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Fri, 27 Mar 2009 21:13:40 +0900
State-Changed-Why:
There is a report that ip4 hwcsum is not used properly.


From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: src/sys/dev/ic
Date: Fri, 27 Mar 2009 12:19:17 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Fri Mar 27 12:19:17 UTC 2009

 Modified Files:
 	src/sys/dev/ic: rtl8169.c rtl81x9reg.h

 Log Message:
 Check a correct bit for ip4csum-rx.  Reported privately on PR kern/40955.


 To generate a diff of this commit:
 cvs rdiff -u -r1.111 -r1.112 src/sys/dev/ic/rtl8169.c
 cvs rdiff -u -r1.34 -r1.35 src/sys/dev/ic/rtl81x9reg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Izumi Tsutsui <tsutsui@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: src/sys/dev/ic
Date: Sat, 28 Mar 2009 22:16:08 +0000

 Module Name:	src
 Committed By:	tsutsui
 Date:		Sat Mar 28 22:16:08 UTC 2009

 Modified Files:
 	src/sys/dev/ic: rtl8169.c

 Log Message:
 Fix another botch in hwcsum changes for PR kern/40955:
 8168/8111/8168B/8111B doesn't have DESCV2.

 Problem reported by Arto Huusko on current-users@.


 To generate a diff of this commit:
 cvs rdiff -u -r1.112 -r1.113 src/sys/dev/ic/rtl8169.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->pending-pullups
State-Changed-By: tsutsui@NetBSD.org
State-Changed-When: Wed, 01 Apr 2009 20:24:11 +0900
State-Changed-Why:
Botches have been fixed and necessary changes are added to ticket,
but hw csum support for newer chips will be deferred after 5.0.


From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: [netbsd-5] src/sys/dev/ic
Date: Fri, 1 May 2009 02:03:45 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri May  1 02:03:44 UTC 2009

 Modified Files:
 	src/sys/dev/ic [netbsd-5]: rtl8169.c rtl81x9reg.h rtl81x9var.h

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #597):
 	sys/dev/ic/rtl8169.c: revision 1.109
 	sys/dev/ic/rtl81x9reg.h: revision 1.34
 	sys/dev/ic/rtl81x9var.h: revision 1.43
 Add hardware checksum support for newer PCIe 8168/8111/8102 chips,
 per device info taken from FreeBSD driver.  Tested by snj@ on 8111C.
 Should closes PR kern/40955.
 Note on old 8169 chips IP hw csum must be enabled to use TCP/UDP hw csums,
 but I'm not sure if these newer chips still have the same restriction.


 To generate a diff of this commit:
 cvs rdiff -u -r1.105.4.2 -r1.105.4.3 src/sys/dev/ic/rtl8169.c
 cvs rdiff -u -r1.32.4.1 -r1.32.4.2 src/sys/dev/ic/rtl81x9reg.h
 cvs rdiff -u -r1.41.12.1 -r1.41.12.2 src/sys/dev/ic/rtl81x9var.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: [netbsd-5] src/sys/dev/ic
Date: Fri, 1 May 2009 02:10:03 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri May  1 02:10:03 UTC 2009

 Modified Files:
 	src/sys/dev/ic [netbsd-5]: rtl8169.c rtl81x9reg.h

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #597):
 	sys/dev/ic/rtl8169.c: revision 1.112
 	sys/dev/ic/rtl81x9reg.h: revision 1.35
 Check a correct bit for ip4csum-rx.  Reported privately on PR kern/40955.


 To generate a diff of this commit:
 cvs rdiff -u -r1.105.4.5 -r1.105.4.6 src/sys/dev/ic/rtl8169.c
 cvs rdiff -u -r1.32.4.2 -r1.32.4.3 src/sys/dev/ic/rtl81x9reg.h

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Soren Jacobsen <snj@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/40955 CVS commit: [netbsd-5] src/sys/dev/ic
Date: Fri, 1 May 2009 02:11:15 +0000

 Module Name:	src
 Committed By:	snj
 Date:		Fri May  1 02:11:15 UTC 2009

 Modified Files:
 	src/sys/dev/ic [netbsd-5]: rtl8169.c

 Log Message:
 Pull up following revision(s) (requested by tsutsui in ticket #597):
 	sys/dev/ic/rtl8169.c: revision 1.113
 Fix another botch in hwcsum changes for PR kern/40955:
 8168/8111/8168B/8111B doesn't have DESCV2.
 Problem reported by Arto Huusko on current-users@.


 To generate a diff of this commit:
 cvs rdiff -u -r1.105.4.6 -r1.105.4.7 src/sys/dev/ic/rtl8169.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: snj@NetBSD.org
State-Changed-When: Sun, 17 May 2009 18:34:09 +0000
State-Changed-Why:
Pullup complete.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.